--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,9 @@
             </li>
           </ul>
           <a class="logo">
-            <img src="@images/logo.jpg" alt="Логотип сайта" class="logo-img">
+            <img src="@images/logo.svg" alt="Логотип сайта" class="logo-img">
           </a>
-          <a href="tel:79094678810" class="phone">+7 909-467-88-10</a>
+          <a href="tel:79094688810" class="phone">+7 909-468-88-10</a>
         </nav>
       </div>
     </header>
