--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,11 @@
           <a href="" class="headline-btn">ВЫБРАТЬ</a>
         </div>
       </section>
+      <section class="news">
+        <div class="container">
+
+        </div>
+      </section>
     </main>
   </body>
 </html>
