--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,35 @@
           </div>
         </div>
       </section>
+      <section class="color">
+        <div class="container">
+          <h2 class="color-title">
+            ВЫБЕРИ СВОЙ ЦВЕТ
+          </h2>
+          <ul class="color-list">
+            <li class="color-item">
+              <img src="@images/silver.jpg" alt="">
+              <h3>Silver</h3>
+              <p>Серебристый</p>
+            </li>
+            <li class="color-item">
+              <img src="@images/purple.jpg.jpg" alt="">
+              <h3>Deep purple</h3>
+              <p>Темно фиолетовый</p>
+            </li>
+            <li class="color-item">
+              <img src="@images/gold.jpg" alt="">
+              <h3>Gold</h3>
+              <p>Золотой</p>
+            </li>
+            <li class="color-item">
+              <img src="@images/black.jpg" alt="">
+              <h3>Space Black</h3>
+              <p>Космический черный</p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
   </body>
 </html>
