--- a/src/index.html
+++ b/src/index.html
@@ -42,26 +42,42 @@
           </h2>
           <ul class="color-list">
             <li class="color-item">
-              <img src="@images/silver.jpg" alt="">
+              <img src="@images/silver.jpg" alt="iphone">
               <h3>Silver</h3>
               <p>Серебристый</p>
             </li>
             <li class="color-item">
-              <img src="@images/purple.jpg.jpg" alt="">
+              <img src="@images/purple.jpg" alt="iphone">
               <h3>Deep purple</h3>
               <p>Темно фиолетовый</p>
             </li>
             <li class="color-item">
-              <img src="@images/gold.jpg" alt="">
+              <img src="@images/gold.jpg" alt="iphone">
               <h3>Gold</h3>
               <p>Золотой</p>
             </li>
             <li class="color-item">
-              <img src="@images/black.jpg" alt="">
+              <img src="@images/black.jpg" alt="iphone">
               <h3>Space Black</h3>
               <p>Космический черный</p>
             </li>
           </ul>
+        </div>
+      </section>
+      <section class="contacts">
+        <div class="container">
+          <div class="contacts-inner">
+            <form class="contacts-form" action="#">
+              <h2 class="contacts-title">
+                ХОЧЕШЬ IPHONE 14 PRO?
+              </h2>
+              <input type="text" class="contacts-input" placeholder="Ваше имя">
+              <input type="tel" class="contacts-input" placeholder="Номер телефона">
+              <p>В ближайшее время наш менеджер свяжется с Вами</p>
+              <button type="submit">ЗАКАЗАТЬ</button>
+            </form>
+            <img src="@images/contact.jpg" alt="iphone">
+          </div>
         </div>
       </section>
     </main>
