--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,6 +1,12 @@
 <header class="header">
   <div class="container">
     <nav class="nav">
+      <button class="menu-btn" type="button">
+        <span class="btn-line"></span>
+        <span class="btn-line"></span>
+        <span class="btn-line"></span>
+        <span class="btn-line"></span>
+      </button>
       <ul class="menu">
         <li class="menu-item">
           <a href="#" class="menu-link">Что нового</a>
