--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
               <p>В ближайшее время наш менеджер свяжется с Вами</p>
               <button type="submit">ЗАКАЗАТЬ</button>
             </form>
-            <img src="@images/contact.jpg" alt="iphone">
+            <img class="contacts-img" src="@images/contact.jpg" alt="iphone">
           </div>
         </div>
       </section>
